LPS-68878 Avoid overlap in file uploader field

--- a/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -31,3 +31,8 @@
 .knowledge-base-portlet-admin h5 span.kb-descriptive-details {
 	margin-left: 24px;
 }
+
+.dialog-iframe-popup .knowledge-base-portlet-admin .lfr-dynamic-uploader {
+	position: relative;
+	top: 0;
+}
